--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Services\\": "/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
