--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
             "Services\\": "/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
